--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Wadu",
-  "version": "0.0.1",
+  "name": "wadu",
+  "version": "1.0.0",
   "scripts": {
     "start": "node tools/run.js",
     "build": "NODE_ENV=production node tools/build.js --release",
@@ -11,7 +11,7 @@
     "type": "git",
     "url": ""
   },
-  "author": "Stanley Zhao <szhao@nautilusdigital.com>",
+  "author": "Andrew Song <andrewgnos@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": ""
@@ -20,119 +20,120 @@
     "*.css"
   ],
   "dependencies": {
-    "@babel/polyfill": "7.0.0",
-    "@material-ui/core": "3.9.2",
-    "@material-ui/icons": "3.0.2",
-    "apollo-cache-inmemory": "1.3.0",
-    "apollo-client": "2.4.8",
-    "apollo-link": "1.0.7",
-    "apollo-link-context": "1.0.10",
-    "apollo-link-error": "1.0.3",
-    "apollo-link-http": "1.3.2",
-    "apollo-link-retry": "2.1.1",
-    "apollo-utilities": "1.0.26",
-    "auth0-js": "9.8.2",
-    "babel-plugin-emotion": "9.2.11",
-    "date-fns": "1.29.0",
-    "emotion": "9.2.8",
-    "graphql": "14.0.2",
-    "graphql-tag": "2.10.0",
-    "immutability-helper": "2.8.1",
+    "@babel/polyfill": "7.6.0",
+    "@hot-loader/react-dom": "16.9.0",
+    "@material-ui/core": "4.5.0",
+    "@material-ui/icons": "4.4.3",
+    "apollo-cache-inmemory": "1.6.3",
+    "apollo-client": "2.6.4",
+    "apollo-link": "1.2.13",
+    "apollo-link-context": "1.0.19",
+    "apollo-link-error": "1.1.12",
+    "apollo-link-http": "1.5.16",
+    "apollo-link-retry": "2.2.15",
+    "apollo-utilities": "1.3.2",
+    "auth0-js": "9.11.3",
+    "babel-plugin-emotion": "10.0.21",
+    "date-fns": "2.4.1",
+    "emotion": "10.0.17",
+    "graphql": "14.5.8",
+    "graphql-tag": "2.10.1",
+    "immutability-helper": "3.0.1",
     "jump.js": "1.0.2",
     "jwt-decode": "2.2.0",
-    "libphonenumber-js": "1.6.9",
+    "libphonenumber-js": "1.7.25",
     "lodash.debounce": "^4.0.8",
-    "node-fetch": "2.3.0",
-    "prop-types": "15.6.2",
-    "react": "16.6.3",
-    "react-apollo": "2.3.3",
-    "react-dom": "16.6.3",
-    "react-helmet": "5.2.0",
-    "react-hot-loader": "4.6.1",
+    "node-fetch": "2.6.0",
+    "prop-types": "15.7.2",
+    "react": "16.9.0",
+    "react-apollo": "3.1.2",
+    "react-dom": "16.9.0",
+    "react-helmet": "5.2.1",
+    "react-hot-loader": "^4.12.14",
     "react-loadable": "5.5.0",
-    "react-redux": "6.0.0",
-    "react-router-dom": "4.3.1",
-    "redux": "4.0.1",
+    "react-redux": "7.1.1",
+    "react-router-dom": "5.1.2",
+    "redux": "4.0.4",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
-    "short-uuid": "^3.1.0",
-    "url-join": "4.0.0",
+    "short-uuid": "^3.1.1",
+    "url-join": "4.0.1",
     "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.0.0",
-    "@babel/plugin-proposal-decorators": "7.0.0",
-    "@babel/plugin-proposal-do-expressions": "7.0.0",
-    "@babel/plugin-proposal-export-default-from": "7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
-    "@babel/plugin-proposal-function-bind": "7.0.0",
-    "@babel/plugin-proposal-function-sent": "7.0.0",
-    "@babel/plugin-proposal-json-strings": "7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "7.0.0",
+    "@babel/core": "7.6.2",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/plugin-proposal-decorators": "7.6.0",
+    "@babel/plugin-proposal-do-expressions": "7.6.0",
+    "@babel/plugin-proposal-export-default-from": "7.5.2",
+    "@babel/plugin-proposal-export-namespace-from": "7.5.2",
+    "@babel/plugin-proposal-function-bind": "7.2.0",
+    "@babel/plugin-proposal-function-sent": "7.5.0",
+    "@babel/plugin-proposal-json-strings": "7.2.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.4.4",
+    "@babel/plugin-proposal-numeric-separator": "7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "7.6.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.5.0",
+    "@babel/plugin-proposal-throw-expressions": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-syntax-import-meta": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.0.0",
-    "@babel/preset-env": "7.0.0",
+    "@babel/plugin-syntax-import-meta": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.6.2",
+    "@babel/preset-env": "7.6.2",
     "@babel/preset-react": "7.0.0",
-    "@babel/register": "7.0.0",
-    "@babel/runtime": "7.0.0",
-    "assets-webpack-plugin": "3.9.7",
-    "autoprefixer": "9.1.5",
+    "@babel/register": "7.6.2",
+    "@babel/runtime": "7.6.2",
+    "assets-webpack-plugin": "3.9.10",
+    "autoprefixer": "9.6.4",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.0",
-    "browser-sync": "2.26.0",
-    "connect-history-api-fallback": "1.5.0",
-    "css-loader": "2.0.0",
-    "cssnano": "4.1.7",
-    "ejs": "2.6.1",
-    "enzyme": "3.7.0",
-    "eslint": "5.6.1",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-import-resolver-webpack": "0.10.1",
-    "eslint-plugin-babel": "5.2.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "file-loader": "2.0.0",
-    "front-matter": "3.0.0",
-    "jest": "23.6.0",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "24.9.0",
+    "babel-loader": "8.0.6",
+    "browser-sync": "2.26.7",
+    "connect-history-api-fallback": "1.6.0",
+    "css-loader": "3.2.0",
+    "cssnano": "4.1.10",
+    "ejs": "2.7.1",
+    "enzyme": "3.10.0",
+    "eslint": "6.5.1",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-import-resolver-webpack": "0.11.1",
+    "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.16.0",
+    "file-loader": "4.2.0",
+    "front-matter": "3.0.2",
+    "jest": "24.9.0",
     "json-loader": "0.5.7",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "path-to-regexp": "2.4.0",
-    "pixrem": "4.0.1",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "path-to-regexp": "3.1.0",
+    "pixrem": "5.0.0",
     "pleeease-filters": "4.0.0",
-    "postcss": "7.0.5",
-    "postcss-calc": "6.0.2",
-    "postcss-color-function": "4.0.1",
-    "postcss-custom-media": "7.0.4",
-    "postcss-custom-properties": "8.0.8",
+    "postcss": "7.0.18",
+    "postcss-calc": "7.0.1",
+    "postcss-color-function": "4.1.0",
+    "postcss-custom-media": "7.0.8",
+    "postcss-custom-properties": "9.0.2",
     "postcss-custom-selectors": "5.1.2",
     "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-import": "12.0.0",
+    "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-media-minmax": "4.0.0",
-    "postcss-nesting": "7.0.0",
+    "postcss-nesting": "7.0.1",
     "postcss-selector-matches": "4.0.0",
     "postcss-selector-not": "4.0.0",
-    "react-test-renderer": "16.5.2",
-    "rimraf": "2.6.2",
-    "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.1.0",
-    "uglifyjs-webpack-plugin": "2.0.1",
-    "url-loader": "1.1.2",
-    "webp-loader": "0.4.0",
-    "webpack": "4.20.2",
-    "webpack-dev-middleware": "3.4.0",
-    "webpack-hot-middleware": "2.24.3",
-    "webpack-merge": "4.1.5"
+    "react-test-renderer": "16.10.2",
+    "rimraf": "3.0.0",
+    "style-loader": "1.0.0",
+    "terser-webpack-plugin": "2.1.2",
+    "uglifyjs-webpack-plugin": "2.2.0",
+    "url-loader": "2.2.0",
+    "webp-loader": "0.5.0",
+    "webpack": "4.41.0",
+    "webpack-dev-middleware": "3.7.2",
+    "webpack-hot-middleware": "2.25.0",
+    "webpack-merge": "4.2.2"
   },
   "babel": {
     "presets": [
@@ -191,6 +192,7 @@
         2,
         "never"
       ],
+      "react/jsx-curly-newline": "off",
       "react/jsx-filename-extension": "off",
       "react/jsx-one-expression-per-line": "off",
       "max-len": "off",
