--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wadu",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "scripts": {
     "start": "node tools/run.js",
     "build": "NODE_ENV=production node tools/build.js --release",
@@ -22,8 +22,8 @@
   "dependencies": {
     "@babel/polyfill": "7.6.0",
     "@hot-loader/react-dom": "16.9.0",
-    "@material-ui/core": "4.5.0",
-    "@material-ui/icons": "4.4.3",
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "apollo-cache-inmemory": "1.6.3",
     "apollo-client": "2.6.4",
     "apollo-link": "1.2.13",
@@ -33,23 +33,21 @@
     "apollo-link-retry": "2.2.15",
     "apollo-utilities": "1.3.2",
     "auth0-js": "9.11.3",
-    "babel-plugin-emotion": "10.0.21",
     "date-fns": "2.4.1",
-    "emotion": "10.0.17",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "immutability-helper": "3.0.1",
     "jump.js": "1.0.2",
     "jwt-decode": "2.2.0",
-    "libphonenumber-js": "1.7.25",
     "lodash.debounce": "^4.0.8",
     "node-fetch": "2.6.0",
     "prop-types": "15.7.2",
-    "react": "16.9.0",
+    "querystring": "^0.2.0",
+    "react": "^16.12.0",
     "react-apollo": "3.1.2",
-    "react-dom": "16.9.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "5.2.1",
-    "react-hot-loader": "^4.12.14",
+    "react-hot-loader": "^4.12.19",
     "react-loadable": "5.5.0",
     "react-redux": "7.1.1",
     "react-router-dom": "5.1.2",
@@ -141,7 +139,6 @@
       "@babel/preset-react"
     ],
     "plugins": [
-      "emotion",
       "react-hot-loader/babel",
       "@babel/plugin-transform-runtime",
       "@babel/plugin-syntax-dynamic-import",
