--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "@babel/polyfill": "7.6.0",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "@hot-loader/react-dom": "16.9.0",
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
@@ -33,6 +34,7 @@
     "apollo-link-retry": "2.2.15",
     "apollo-utilities": "1.3.2",
     "auth0-js": "9.11.3",
+    "contentful": "^7.14.0",
     "date-fns": "2.4.1",
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
